tests/generated/017_escapejs.out
Fatal error: Call to undefined method DtlIter::escapejs() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/017_escapejs.php on line 5